--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "aos": "^2.3.4"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^5.0.0"
+    "@fullhuman/postcss-purgecss": "^5.0.0",
+    "autoprefixer": "^10.4.14"
   }
 }
